# docs/swagger.json
@@ -88,8 +88,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/domain.Admin"
                         }
@@ -422,7 +422,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/domain.CreateUserResponse"
@@ -864,7 +864,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Provide with your refresh token in header to make new refresh and access token.",
+                "description": "Provide with your refresh token in header to make new refresh and access token pair.",
                 "consumes": [
                     "application/json"
                 ],
